# mlx-flashattention-steel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  PROMPT_PHASE_1.2.md  README.md  RESULTS.md  THIRD_PARTY_LICENSES  TODO.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_all.py  bench_attention.py  bench_backward.py  bench_compile.py  bench_kvcache.py  bench_mlx_lm.py  bench_paged_kv.py  bench_rope_3d.py  bench_segment.py  bench_softcap_alibi.py  bench_spatial_masks.py  bench_varlen.py
csrc/: bindings.cpp  mfa_attention.cpp  mfa_attention.hpp  mfa_paged_gather.cpp  mfa_paged_gather.hpp  mfa_shader_gen.cpp  mfa_shader_gen.hpp  mfa_steel_bwd.cpp  mfa_steel_bwd.hpp  mfa_steel_fwd.cpp  mfa_steel_fwd.hpp  shader_cache.hpp  shader_cache.mm
csrc/kernels/: attention_forward.metal
csrc/mfa/: AttentionKernel.cpp  AttentionKernel.hpp  AttentionKernelDescriptor.cpp  AttentionKernelDescriptor.hpp  AttentionKernelType.hpp  AttentionOperand.hpp  CodeWriter.hpp  GEMMHeaders.cpp  GEMMHeaders.hpp  mfa_compat.h
docs/: ARCHITECTURE.md  INVENTORY.md  PAGED_ATTENTION_DESIGN.md
docs/benchmarks/: RESULTS.md
examples/: basic_attention.py  kvcache_decode.py  paged_kv_inference.py  sliding_window.py  varlen_training.py
mlx_mfa/: __init__.py  attention.py  masks.py
mlx_mfa/integrations/: mlx_lm.py
scripts/: check_env.py
tests/: test_attention.py  test_mlx_lm_integration.py
