[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mlx-mfa"
version = "0.1.0"
description = "Metal Flash Attention for MLX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mlx>=0.18.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark"]

[tool.scikit-build]
cmake.minimum-version = "3.24"
cmake.build-type = "Release"
wheel.packages = ["mlx_mfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
