[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mlx-mfa"
version = "1.0.0"
description = "Metal Flash Attention for MLX — causal attention 1.5-2.9x faster than SDPA on Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Marco Marcelino"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["mlx>=0.18.0", "numpy"]

[project.urls]
"Source Code" = "https://github.com/marcogva-hub/mlx-flashattention-steel"
"Bug Tracker" = "https://github.com/marcogva-hub/mlx-flashattention-steel/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark"]

[tool.scikit-build]
cmake.minimum-version = "3.24"
cmake.build-type = "Release"
wheel.packages = ["mlx_mfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
